# Haskell_Lang

./: README.md
01_haskell_Tutorials/: README.md
01_haskell_Tutorials/a01_haskell_tutorial/a01_hello_haskell/: Main.hs
01_haskell_Tutorials/a02_JSON_Parser_Tsoding/: README.md
01_haskell_Tutorials/a03_ghc_ghcup_step_by_step/: README.md
01_haskell_Tutorials/a03_ghc_ghcup_step_by_step/a01_hello_haskell/: Makefile
01_haskell_Tutorials/a03_ghc_ghcup_step_by_step/a02_hello_runghc/: Makefile
01_haskell_Tutorials/a03_ghc_ghcup_step_by_step/a03_ghc_Wall/: Makefile  README.md
02_Rust_vs_Haskell/: README.md
02_Rust_vs_Haskell/haskell_hello1/: CHANGELOG.md  LICENSE  haskell_hello1.cabal
02_Rust_vs_Haskell/haskell_hello2/: main.hs
03_Haskell_Doc_Monad/: README.md
05_cabal_stack_VScode_GHCi_debugger/: README.md
05_cabal_stack_VScode_GHCi_debugger/001_sort_precalculated/: Main.hs
05_cabal_stack_VScode_GHCi_debugger/003_cabal_Vscode_Debugging/: README.md
GHCi_debugger/: README.md  REAMDE.md
GHCi_debugger/001_sort_precalculated/: Sort.hs
algorithm/sort/quick_sort/: quick_sort.hs
exercise/: README.md
exercise/002_data/: Data1.hs  ShowInstace.hs
exercise/002_sum_foldr/: flodr_sum.hs
exercise/004types/: Types1.hs
exercise/006types_typle/: Types3.hs
exercise/007types_list_u32_mixedlist/: Types4.hs
exercise/008types_aString_charList/: Types5.hs
exercise/010_Haskell_Declarations/: README.md
exercise/011_new_database_access_library/: README.md
gtk2hs/: README.md
gtk2hs/exercise/001_getting_started/: Main.hs  gtk-intro.cabal
(+25 files in other folders)
